err/dayonetools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/dayonetools'...
Compiling './lib/python3.5/site-packages/dayonetools/main.py'...
***   File "./lib/python3.5/site-packages/dayonetools/main.py", line 16
    print _help.format(**args)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dayonetools/services'...
Compiling './lib/python3.5/site-packages/dayonetools/services/habit_list.py'...
***   File "./lib/python3.5/site-packages/dayonetools/services/habit_list.py", line 148
    print 'Failed getting timezone, check your TIMEZONE variable'
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dayonetools/services/idonethis.py'...
***   File "./lib/python3.5/site-packages/dayonetools/services/idonethis.py", line 136
    print 'Created entry for %s: %s' % (date, file_name)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dayonetools/services/nikeplus.py'...
***   File "./lib/python3.5/site-packages/dayonetools/services/nikeplus.py", line 121
    print 'Created entry for %s: %s' % (activity.start_time, file_name)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dayonetools/services/pedometerpp.py'...
***   File "./lib/python3.5/site-packages/dayonetools/services/pedometerpp.py", line 78
    print self.args, file
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dayonetools/services/sleep_cycle.py'...
***   File "./lib/python3.5/site-packages/dayonetools/services/sleep_cycle.py", line 130
    print 'Created entry for %s: %s' % (entry.Start, file_name)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dayonetools/services/twitter.py'...
***   File "./lib/python3.5/site-packages/dayonetools/services/twitter.py", line 43
    print tweet_to_markdown(tweet)
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dayonetools-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2014.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
